--- a/qna_app/templates/newquestion.html
+++ b/qna_app/templates/newquestion.html
@@ -8,14 +8,12 @@
 </head>
 <body>
     <h1>This is new question</h1>
-    {% for q in question %}
-        <h2>{{q.title}}</h2>
-        <h2> {{q.question_descp}}</h2>
-        <h2>{{q.timestamp}}</h2>
-        {{ q.questtion_img}}
-        <img src="../../media/{{q.question_img}}" style="width: 200px; height:200px;"
-        />
-    {%endfor%}
+    <form action="" method="post" >
+            {% csrf_token %}
+        {{form}}
+        <input type="submit" value="Submit">
+    </form>
+    
     
 </body>
 </html>
